crates/query/src/snapshots/kcl_query__tests__list_variables-21.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "sha.data.a.b": [
    {
      "name": "b",
      "type_name": "",
      "op_sym": ":",
      "value": "{\n    \"c\": 2\n}",
      "list_items": [],
      "dict_entries": [
        {
          "key": "c",
          "value": {
            "name": "c",
            "type_name": "",
            "op_sym": ":",
            "value": "2",
            "list_items": [],
            "dict_entries": []
          }
        }
      ]
    }
  ]
}
