crates/query/src/snapshots/kcl_query__tests__list_variables-25.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "shb.a.name": [
    {
      "name": "name",
      "type_name": "",
      "op_sym": ":",
      "value": "\"HelloB\"",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
