crates/query/src/snapshots/kcl_query__tests__list_variables-3.snap
---
source: crates/query/src/tests.rs
expression: got_json
---
{
  "a3": [
    {
      "name": "a3",
      "type_name": "",
      "op_sym": "=",
      "value": "3m",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
